# ocr-agent

./: .gitignore  README.md  cleaned_tank.json  environment.yml  main.py  pyproject.toml  requirements.txt
agent/: main.py
agent/services/: converse_agent.py  ocr_agent.py  textract.py
agent/utils/: nodes.py  prompts.py  schemas.py  state.py  tools.py  utils.py
app/: main.py
app/agent/: ocr_agent.py
app/agent/utils/: prompts.py  schemas.py  tools.py
app/routers/: converse.py  ocr.py
uploads/: 76186564445__1DC8AC04-E1D1-40F4-A2AB-A9E24064DB3B.heic
