[project]
name = "ocr-agent"
version = "0.1.0"
description = "OCR Agent which handles multiple types of ocr jobs[Tanks,Tickets]"
authors = [
    {name = "mauro",email = "m.montenegro.meza@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph (>=0.3.5,<0.4.0)",
    "langchain-aws (>=0.2.15,<0.3.0)",
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "ipython (>=9.0.2,<10.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "pillow (>=11.2.1,<12.0.0)"    
]

[build-system]
requires = ["poetry-core>=2.1.1,<3.0.0"]
build-backend = "poetry.core.masonry.api"